--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ h2 {
                     
                         
                         .titre {
-                          color: beige;
+                          color: white;
                           font-family: "Lobster", sans-serif;
                           font-weight: 900;
                           font-style: normal;
